kube/netclient-template-doks-uspace.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: netclient-1
  labels:
    app: netclient-1
spec:
  selector:
    matchLabels:
      app: netclient-1
  template:
    metadata:
      labels:
        app: netclient-1
    spec:
      hostNetwork: true
      containers:
      - name: netclient-1
        image: gravitl/netclient:0.9.1-doks-uspace
        volumeMounts:
        - mountPath: /etc/netclient
          name: etc-netclient
        securityContext:
          privileged: true
      volumes:
      - hostPath:
          path: /etc/netclient
          type: DirectoryOrCreate
        name: etc-netclient
