kube/netmaker-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netmaker
  labels:
    app: netmaker
spec:
  selector:
    matchLabels:
      app: netmaker
  replicas: 1
  template:
    metadata:
      labels:
        app: netmaker
    spec:
      containers:
      - name: netmaker
        image: gravitl/netmaker:v0.5
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: netmaker
  name: netmaker
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: netmaker
  sessionAffinity: None
  type: ClusterIP
