kube/netmaker-grpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netmaker-grpc
  labels:
    app: netmaker-grpc
spec:
  selector:
    matchLabels:
      app: netmaker-grpc
  replicas: 1
  template:
    metadata:
      labels:
        app: netmaker-grpc
    spec:
      containers:
      - name: netmaker-grpc
        image: gravitl/netmaker:v0.5
        ports:
        - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: netmaker-grpc
  name: netmaker-grpc
spec:
  ports:
  - port: 50051
    protocol: TCP
    targetPort: 50051
  selector:
    app: netmaker-grpc
  sessionAffinity: None
  type: ClusterIP
